# chat

./: .gitignore  chat.html  chat.html.md  index.html  index.html.md  main.html  main.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
chat/: _modidx.py  chat.py  core.py  main.py  run.py
nbs/: 00_core.ipynb  chat.ipynb  core.ipynb  index.ipynb  main.ipynb  nbdev.yml  run.ipynb  sidebar.yml
