[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chat"
dynamic = ["version"]
description = "Chat app"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "northarray", email = "271184997+northarray@users.noreply.github.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/northarray/chat"
Documentation = "https://northarray.github.io/chat/"

[project.entry-points.nbdev]
chat = "chat._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "chat.__version__"}

[tool.setuptools.packages.find]
include = ["chat"]

[tool.nbdev]
